# leadgen-mcp

./: .env.example  .gitignore  claude_desktop_config.json  docker-compose.searxng.yml  docker-compose.truemail.yml  docker-compose.whodat.yml  pyproject.toml
.claude/: settings.local.json
data/: email_patterns.json  scoring_weights.json  tech_signatures.json
data/searxng/: settings.yml
scripts/: bulk_social_creator.py  create_social_accounts.py  domains.txt  retry_nrd_emails.py  seed_sender_accounts.py  setup_dns.sh  setup_email_infra.sh  setup_stalwart_api.py  social_accounts_plan.md
src/leadgen_mcp/: __init__.py  cli.py  config.py  dashboard.py  pipeline.py  queue.py  scheduler.py  server.py
src/leadgen_mcp/ai/: email_generator.py  ollama_client.py  prompts.py  templates.py  tools.py
src/leadgen_mcp/db/: __init__.py  migrate_to_pg.py  models.py  pg_repository.py  pg_schema.py  repository.py
src/leadgen_mcp/domain_intel/: dns_checker.py  http_monitor.py  ssl_monitor.py  tools.py  whois_scanner.py
src/leadgen_mcp/email_sender/: campaign.py  rate_limiter.py  rotation.py  smtp.py  tools.py  tracking.py
src/leadgen_mcp/enrichment/: company_intel.py  contacts.py  email_finder.py  scoring.py  social_profiler.py  tools.py  truemail_client.py  vertical.py
src/leadgen_mcp/imap_aggregate/: __init__.py  classifier.py  poller.py  tools.py
src/leadgen_mcp/listmonk/: __init__.py  client.py  sync.py  tools.py
src/leadgen_mcp/notifications/: __init__.py  telegram.py
src/leadgen_mcp/outreach/: __init__.py  (+1 more)
systemd/: leadgen-nrd.service
tracking_server/: app.py
(+37 files in other folders)
