[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leadgen-mcp"
version = "1.0.0"
description = "MCP Server for AI-powered lead generation - scans websites, crawls platforms, and sends personalized outreach emails"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "crawl4ai>=0.4",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "aiosmtplib>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "dnspython>=2.6",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
tracking = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
leadgen-mcp = "leadgen_mcp.server:main"
leadgen = "leadgen_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leadgen_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/leadgen_mcp", "data"]
